--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,10 @@ h1 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
+  /* text-align: center; */
   letter-spacing: 0.03em;
+  margin-top: 0px;
+  margin-bottom: 50px;
 
   color: var(--title_color);
 }
@@ -126,6 +128,8 @@ h1 {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--title_color);
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 .dev {
   font-weight: 400;
@@ -133,6 +137,8 @@ h1 {
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: var(--primary_gray);
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .footer {
   background-color: var(--hero_color);
@@ -210,7 +216,6 @@ ul {
 .box {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: #2196f3;
 }
 .div {
   margin-left: auto;
