--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,7 @@ body {
 .list {
   width: 1170px;
   display: flex;
-  list-style: none;
-  text-align: center;
-  /* margin-right: 150px;
-  margin-left: 150px; */
+  /* flex-wrap: wrap; */
 }
 
 .list .page + .page {
@@ -76,7 +73,7 @@ body {
   margin-right: auto;
 }
 /* нов изменил */
-.container main-nav {
+.container .main-nav {
   display: flex;
 }
 
@@ -145,7 +142,7 @@ h1 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-top: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 .text {
   font-weight: 400;
@@ -153,8 +150,10 @@ h1 {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary_gray);
-  margin-top: 0 px;
-  margin-bottom: 0px;
+  margin-top: 10 px;
+  margin-top: 0px;
+  /* text-align: center; */
+  /* margin-bottom: 0px; */
 }
 .section {
   font-weight: 700;
@@ -251,8 +250,12 @@ ul {
 .paragraf {
   line-height: 1.88;
   color: var(--primary_gray);
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .title {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: var(--title_color);
   line-height: 2;
   font-weight: 700;
@@ -274,12 +277,25 @@ ul {
 .item-btn .button-port {
   margin-left: 8px;
 }
+
+/* комментарий какой то здесь */
+
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  margin-right: 30px;
-  background-color: red;
+  /* background-color: red; */
 }
-.flex-container:nth-child(3n) {
+.item-box:nth-child(3n) {
   margin-right: 0;
+}
+.item-box:nth-last-child(-n + 3) {
+  margin-bottom: 30px;
+}
+.item-box {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+}
+.item {
+  width: calc((100% - 90px) / 4);
+  margin-right: 30px;
 }
