--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .list {
-  width: 1170px;
+  /* width: 1170px; */
   display: flex;
 
   /* flex-wrap: wrap; */
@@ -48,7 +48,7 @@ body {
   display: block;
   padding-top: 35px;
   padding-bottom: 35px;
-  margin-right: 50px;
+  margin-left: 93px;
 
   color: var(--blue);
   font-weight: 500;
