--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,11 @@ body {
 .list {
   /* width: 1170px; */
   display: flex;
+  margin-left: auto;
 
   /* flex-wrap: wrap; */
 }
-
+.site-nav .page + .page,
 .list .page + .page {
   margin-left: 50px;
 }
@@ -41,16 +42,16 @@ body {
   list-style: none;
 
   display: flex;
-  margin-left: auto;
+  margin-left: ;
 }
 
 .site-nav .link {
   display: block;
   padding-top: 35px;
   padding-bottom: 35px;
-  margin-left: 93px;
 
   color: var(--blue);
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.15;
@@ -58,9 +59,6 @@ body {
   text-decoration: none;
 }
 
-.site-nav.page:not(:last-child) {
-  margin-right: 50px;
-}
 .site-nav.link-current {
   color: var(--blue);
   text-decoration: none;
@@ -73,6 +71,7 @@ body {
   display: flex;
   align-items: center;
   margin-right: auto;
+  justify-content: space-between;
 }
 /* нов изменил */
 .container .main-nav {
