--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,8 @@ body {
   color: var(--button_text);
   margin-top: 0px;
   margin-bottom: 94px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   text-align: center;
 }
 h1 {
@@ -234,18 +236,18 @@ h1 {
 .button-port:focus {
   background-color: var(--blue);
   color: var(--button_text);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px; */
   display: flex;
-  align-items: center;
+  /* align-items: center;
   text-align: center;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06em; */
 }
-.button:active {
+/* .button:active {
   font-size: 1.63;
   line-height: 26px;
   letter-spacing: 0.03em;
-}
+} */
 
 ul {
   list-style: none;
