--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,23 @@
   --pink: #f5f4fa;
   font-style: normal;
 }
+
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 50px;
+  margin-top: 0;
 }
 body {
   font-family: Roboto, sans-serif;
   /* background-color: var(--button_text); */
   font-style: normal;
+}
+ul {
+  padding-left: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 /* убрал маркир список */
 
@@ -83,16 +89,17 @@ body {
 /* Логотип */
 .logo {
   color: var(--title_color);
-}
-.logo .link {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19px;
   letter-spacing: 0.03em;
-  padding-bottom: 24px;
+  padding-top: 24px;
   padding-bottom: 25px;
+  margin-right: 93px;
 }
+/* .logo .link {
+  } */
 .logo .logoblue {
   color: var(--blue);
 }
@@ -155,8 +162,8 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary_gray);
-  margin-top: 0 px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
 
   /* text-align: center; */
   /* margin-bottom: 0px; */
@@ -167,7 +174,8 @@ body {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  margin-bottom: 0px 0px 50px;
+  margin-bottom: 50px;
+  margin-top: 0;
   text-align: center;
 
   color: var(--title_color);
@@ -261,7 +269,7 @@ address {
 }
 
 .style-text {
-  margin-left: auto;
+  margin-left: 331px;
   display: flex;
 }
 .paragraf {
@@ -332,4 +340,8 @@ address {
 }
 .list .item-working {
   width: 270px;
+}
+
+.item-working:not(:last-child) {
+  margin-right: 30px;
 }
