--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   font-family: Roboto, sans-serif;
   /* background-color: var(--button_text); */
   font-style: normal;
+  margin: 0;
 }
 ul {
   padding-left: 0px;
@@ -30,6 +31,8 @@ ul {
 
 .main-nav {
   display: flex;
+  width: 1570px;
+  height: 80px;
 }
 
 .list {
