--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ img {
 .wrap-hero {
   padding-top: 200px;
   padding-bottom: 200px;
-
+  background-image: url(../images/new_hero.jpg);
   text-align: center;
   background-color: var(--secondary-bck-color);
 }
