--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,12 @@ img {
   padding-bottom: 200px;
   background-image: url(../images/new_hero.jpg);
   text-align: center;
-  background-color: var(--secondary-bck-color);
+  background: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/new_hero.jpg), #c4c4c4;
 }
 
 .banner {
