--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ img {
 }
 
 /* прописываю путь каждой иконки- антенна, космонавт, часы и экран . 1- антенна*/
-.icon-antenna ::before {
+/* .icon-antenna::before {
   background-image: url(../images/svg/antenna.svg);
 }
 /* вторая  иконка - ссылка- часы */
@@ -170,13 +170,13 @@ img {
 }
 /* третья иконка-монитор */
 .icon-diagram::before {
-  background-image: url(../images/svg/diagram.svg);
+  /* background-image: url(../images/svg/diagram.svg); */
 }
 /* четвертая иконка- космонавт */
 .icon-astronaut::before {
   background-image: url(../images/svg/astronaut.svg);
 }
-.banner {
+*/ .banner {
   max-width: 696px;
 }
 
@@ -223,6 +223,19 @@ img {
 }
 
 /* Наши преимущества */
+.icon .icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f4fa;
+  width: 100%;
+  height: 120px;
+  margin-bottom: 30px;
+}
+.icon-size {
+  width: 65px;
+  height: 70px;
+}
 
 .list-why-we {
   display: flex;
@@ -277,6 +290,11 @@ img {
 .our-team .item {
   width: calc((100% - 30px * 3) / 4);
   margin-right: 30px;
+}
+.icon-team {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team .item:last-child {
